// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DmaStore read getList works 1`] = `
Array [
  Object {
    "id": "5c14df51-3d66-4389-849f-92aa04ffff61",
    "source": Object {
      "codec": "dag-pb",
      "hash": Object {
        "data": Array [
          18,
          32,
          97,
          107,
          140,
          218,
          121,
          181,
          174,
          179,
          241,
          177,
          147,
          132,
          31,
          9,
          135,
          159,
          192,
          60,
          61,
          173,
          200,
          132,
          162,
          226,
          128,
          119,
          153,
          141,
          252,
          5,
          97,
          162,
        ],
        "type": "Buffer",
      },
      "version": 1,
    },
    "uri": "Entry.Image",
  },
  Object {
    "id": "ebb941ae-419e-4848-8664-57597ddb214e",
    "source": Object {
      "codec": "dag-pb",
      "hash": Object {
        "data": Array [
          18,
          32,
          26,
          46,
          122,
          85,
          42,
          12,
          74,
          209,
          84,
          253,
          49,
          89,
          5,
          33,
          29,
          170,
          81,
          241,
          172,
          244,
          68,
          30,
          234,
          69,
          153,
          233,
          192,
          215,
          165,
          228,
          102,
          93,
        ],
        "type": "Buffer",
      },
      "version": 1,
    },
    "uri": "Entry.Image",
  },
]
`;

exports[`DmaStore read read works 1`] = `
Object {
  "id": "5c14df51-3d66-4389-849f-92aa04ffff61",
  "source": Object {
    "codec": "dag-pb",
    "hash": Object {
      "data": Array [
        18,
        32,
        97,
        107,
        140,
        218,
        121,
        181,
        174,
        179,
        241,
        177,
        147,
        132,
        31,
        9,
        135,
        159,
        192,
        60,
        61,
        173,
        200,
        132,
        162,
        226,
        128,
        119,
        153,
        141,
        252,
        5,
        97,
        162,
      ],
      "type": "Buffer",
    },
    "version": 1,
  },
  "uri": "Entry.Image",
}
`;
